--- a/Figma to Real Website Responsive/index.html
+++ b/Figma to Real Website Responsive/index.html
@@ -10,7 +10,6 @@
     
     <header>
         <div class="wrapper">
-
             <nav>
                 <div class="logo">GD.</div>
                 <ul>
@@ -30,7 +29,7 @@
                         everything from generating an idea to publishing your games to 
                         different platforms.
                     </p>
-                    <a href="#" class="btn Light">Enrol Now</a>
+                    <a href="#" class="btn light enrol-icon">Enrol Now</a>
                 </div>
                 <div class="right">
                     <img src="images/man-5644200_1280.png" alt="">
@@ -42,21 +41,18 @@
                                 </div>
                                 <p>Students Enrolled</p>
                             </div>
-                            <div class="bg">
-                                
-                            </div>
+                            <div class="bg"></div>
                         </div>
 
                         <div class="achivement-card overall-rating">
                             <div class="content">
                                 <div>
                                     <h3>4.7</h3>
+                                    <img src="images/icons8-star-50.png" alt="">
                                 </div>
                                 <p>Overall Rating</p>
                             </div>
-                            <div class="bg">
-
-                            </div>
+                            <div class="bg"></div>
                         </div>
                     </div>
                 </div>
