Modified CSS in Figma Project

--- a/Figma to Real Website Responsive/index.html
+++ b/Figma to Real Website Responsive/index.html
@@ -72,7 +72,7 @@
         <div class="wrapper">
             <section class="testimonials-section">
                 <div class="left">
-                    <div class="testimonial-card">
+                    <div class="testimonials-card">
                         <div class="content">
                             This is great course. It helped me alot. Thank You :)
                         </div>
@@ -83,7 +83,7 @@
                         <img src="images/cartoon-woman.png" alt="">
                     </div>
 
-                    <div class="testimonial-card">
+                    <div class="testimonials-card">
                         <div class="content">
                             Amazing Work! Well Done!
                         </div>
@@ -97,14 +97,18 @@
 
                 <div class="right">
                     <h2>What our Students say</h2>
-                    <p>
-                        All the students get access to all the videos and also the source code of the projects.
-                    </p>
-                    <p>
-                        You will also have access to private Discord channel where you can discuss all your doubts.
-                    </p>
+                    <div class="features">
+                        <p>
+                            All the students get access to all the videos and also the source code of the projects.
+                        </p>
+                        <p>
+                            You will also have access to private Discord channel where you can discuss all your doubts.
+                        </p>
+                    </div>
+                    <a href="#" class="btn light desktop-btn">Learn More</a>
                 </div>
-                <a href="#" class="btn light">Learn More</a>
+
+                <a href="#" class="btn light mobile-btn">Learn More</a>
             </section>
         </div>
 
