--- a/Figma to Real Website Responsive/index.html
+++ b/Figma to Real Website Responsive/index.html
@@ -29,7 +29,7 @@
                             Game Dev
                         </h1>
                         <p>
-                            This is a Comprehensive Course on Web Development. You will learn
+                            This is a Comprehensive Course on Game Development. You will learn
                             everything from generating an idea to publishing your games to
                             different platforms.
                         </p>
@@ -203,10 +203,10 @@
                         </ul>
                         <div class="social">
                             <a href="#">
-                                <img src="images/icons8-facebook-50.png" alt="">
+                                <img src="images/icons8-facebook-24.png" alt="">
                             </a>
                             <a href="#">
-                                <img src="images/icons8-instagram-50.png" alt="">
+                                <img src="images/icons8-instagram-24.png" alt="">
                             </a>
                         </div>
                         <form action="#">
