Modified CSS file in Figma Project

--- a/Figma to Real Website Responsive/index.html
+++ b/Figma to Real Website Responsive/index.html
@@ -21,6 +21,13 @@
                         <li><a href="#" class="btn dark">Enrol Now</a></li>
                     </ul>
                 </nav>
+
+                <nav class="mobile-nav">
+                    <div class="log">GD.</div>
+                    <div class="menu">
+                        <img src="images/icons8-menu-50.png" alt="">
+                    </div>
+                </nav>
                 <!-- End of Navigation Menu -->
 
                 <div class="hero-section">
