--- a/Airfolio Template Design/index.html
+++ b/Airfolio Template Design/index.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="https://placehold.co/600x400/3E3E70/3E3E70" alt="Hero Image" />
+                    <img src="images/hero image.png" alt="Hero Image" />
                 </div>
             </section>
 
