Added code in html and css files of Ecommerce project

--- a/ECommerce Website HTML CSS JS/index.html
+++ b/ECommerce Website HTML CSS JS/index.html
@@ -13,13 +13,21 @@
             <a href="#"><img src="images/logo.png" alt=""></a>
 
             <div id="navbar">
-                <li><a href="#">Home</a></li>
+                <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">Shop</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#"><i class="fa-regular fa-bag-shopping"></i></a></li>
             </div>
+        </section>
+
+        <section id="hero">
+            <h4>Trade-in-Offer</h4>
+            <h2>Super Value Deals</h2>
+            <h1>On All Products</h1>
+            <p>Save more with coupons & upto 70% Off!</p>
+            <button>Shop Now</button>
         </section>
 
 
