--- a/ECommerce Website HTML CSS JS/index.html
+++ b/ECommerce Website HTML CSS JS/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact Us</a></li>
-                <li><a href="#"><i class="fa-regular fa-bag-shopping"></i></a></li>
+                <li><a href="#"><i class="fa fa-bag-shopping"></i></a></li>
             </div>
         </section>
 
@@ -54,6 +54,29 @@
             <div class="fe-box">
                 <img src="images/features/f6.png" alt="">
                 <h6>F24/7 Support</h6>
+            </div>
+        </section>
+
+        <section id="product1" class="section-p1">
+            <h2>Featured Products</h2>
+            <p>Summer Collection New Modern Design</p>
+            <div class="pro-container">
+                <div class="pro">
+                    <img src="images/products/f1.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart"></i></a>
+                </div>
             </div>
         </section>
 
