--- a/ECommerce Website HTML CSS JS/index.html
+++ b/ECommerce Website HTML CSS JS/index.html
@@ -348,6 +348,21 @@
                 <button class="white">Learn More</button>
             </div>
         </section>
+        
+        <section id="banner3">
+            <div class="banner-box">
+                <h2>SEASONAL SALE</h2>
+                <h3>Winter Collection - 50% OFF</h3>
+            </div>
+            <div class="banner-box banner-box2">
+                <h2>SEASONAL SALE</h2>
+                <h3>Winter Collection - 50% OFF</h3>
+            </div>
+            <div class="banner-box banner-box3">
+                <h2>SEASONAL SALE</h2>
+                <h3>Winter Collection - 50% OFF</h3>
+            </div>
+        </section>
 
         <script src="script.js"></script>
 
