--- a/ECommerce Website HTML CSS JS/index.html
+++ b/ECommerce Website HTML CSS JS/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecommerce Website</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Ecommerce Website</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+            integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body>
+
         <section id="header">
             <a href="#"><img src="images/logo.png" alt=""></a>
 
@@ -180,7 +184,7 @@
                         <h5>Cartoon Astronaut T-Shirts</h5>
                         <div class="star">
                             <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>  
+                            <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
@@ -322,7 +326,7 @@
                         <h5>Cartoon Astronaut T-Shirts</h5>
                         <div class="star">
                             <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>  
+                            <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
@@ -348,7 +352,7 @@
                 <button class="white">Learn More</button>
             </div>
         </section>
-        
+
         <section id="banner3">
             <div class="banner-box">
                 <h2>SEASONAL SALE</h2>
@@ -375,7 +379,61 @@
             </div>
         </section>
 
+        <footer class="section-p1">
+            <div class="col">
+                <img class="logo" src="images/logo.png" alt="">
+                <h4>Contact</h4>
+                <p> <strong>Address:</strong> 562 Wellington Road, Street 32, San Francisco</p>
+                <p> <strong>Phone:</strong> +01 22222 356 / (+91) 01 2345 6789</p>
+                <p> <strong>Hours:</strong> 10:00 - 18:00, Mon - Sat</p>
+                <div class="follow">
+                    <h4>Follow Us</h4>
+                    <div class="icon">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-pinterest-p"></i>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <h4>About</h4>
+                <a href="#">About Us</a>
+                <a href="#">Delivery Information</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Term & Conditions</a>
+                <a href="#">Contact Us</a>
+            </div>
+
+            <div class="col">
+                <h4>My Account</h4>
+                <a href="#">Sign In</a>
+                <a href="#">View Cart</a>
+                <a href="#">My Wishlist</a>
+                <a href="#">Track My Order</a>
+                <a href="#">Help</a>
+            </div>
+
+            <div class="col install">
+                <h4>Install App</h4>
+                <p>From App Store or Google Store</p>
+                <div class="row">
+                    <img src="images/pay/app.jpg" alt="">
+                    <img src="images/pay/play.jpg" alt="">
+                </div>
+                <p>Secured Payments Gateway</p>
+                <img src="images/pay/pay.png" alt="">
+            </div>
+
+            <div class="copywright">
+                <p>© 2021, Web Dev etc, HTML CSS Ecommerce Template</p>
+            </div>
+        </footer>
+
         <script src="script.js"></script>
 
-</body>
+    </body>
+
 </html>
