--- a/ECommerce Website HTML CSS JS/index.html
+++ b/ECommerce Website HTML CSS JS/index.html
@@ -22,7 +22,13 @@
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact Us</a></li>
-                <li><a href="#"><i class="fa fa-bag-shopping"></i></a></li>
+                <li id="lg-bag"><a href="#"><i class="fa fa-bag-shopping"></i></a></li>
+                <a href="#" id="close"><i class="fa fa-times"></i></a>
+            </div>
+            
+            <div id="mobile">
+                <a href="#"><i class="fa fa-bag-shopping"></i></a>
+                <i id="bar" class="fas fa-outdent"></i>
             </div>
         </section>
 
