--- a/ECommerce Website HTML CSS JS/shop.html
+++ b/ECommerce Website HTML CSS JS/shop.html
@@ -17,8 +17,8 @@
             <a href="#"><img src="images/logo.png" alt=""></a>
 
             <div id="navbar">
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a class="active" href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
@@ -32,44 +32,12 @@
             </div>
         </section>
 
-        <section id="hero">
-            <h4>Trade-in-Offer</h4>
-            <h2>Super Value Deals</h2>
-            <h1>On All Products</h1>
+        <section id="page-header">
+            <h2>#stayhome</h2>
             <p>Save more with coupons & upto 70% Off!</p>
-            <button>Shop Now</button>
-        </section>
-
-        <section id="feature" class="section-p1">
-            <div class="fe-box">
-                <img src="images/features/f1.png" alt="">
-                <h6>Free Shipping</h6>
-            </div>
-            <div class="fe-box">
-                <img src="images/features/f2.png" alt="">
-                <h6>Online Order</h6>
-            </div>
-            <div class="fe-box">
-                <img src="images/features/f3.png" alt="">
-                <h6>Save Money</h6>
-            </div>
-            <div class="fe-box">
-                <img src="images/features/f4.png" alt="">
-                <h6>Promotions</h6>
-            </div>
-            <div class="fe-box">
-                <img src="images/features/f5.png" alt="">
-                <h6>Happy Sell</h6>
-            </div>
-            <div class="fe-box">
-                <img src="images/features/f6.png" alt="">
-                <h6>F24/7 Support</h6>
-            </div>
         </section>
 
         <section id="product1" class="section-p1">
-            <h2>Featured Products</h2>
-            <p>Summer Collection New Modern Design</p>
             <div class="pro-container">
                 <div class="pro">
                     <img src="images/products/f1.jpg" alt="">
@@ -199,20 +167,7 @@
                     </div>
                     <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
                 </div>
-            </div>
-        </section>
-
-        <section id="banner" class="section-m1">
-            <h4>Repair Services</h4>
-            <h2>Up to <span>70% Off</span> - All t-Shirts & Accessories</h2>
-            <button class="normal">Explore More</button>
-        </section>
-
-
-        <section id="product1" class="section-p1">
-            <h2>New Arrivals</h2>
-            <p>Summer Collection New Modern Design</p>
-            <div class="pro-container">
+          
                 <div class="pro">
                     <img src="images/products/n1.jpg" alt="">
                     <div class="des">
@@ -344,35 +299,12 @@
             </div>
         </section>
 
-        <section id="sm-banner" class="section-p1">
-            <div class="banner-box">
-                <h4>crazy deals</h4>
-                <h2>buy 1 get 1 free</h2>
-                <span>The best classic dress is on sale at cara</span>
-                <button class="white">Learn More</button>
-            </div>
-            <div class="banner-box banner-box2">
-                <h4>crazy deals</h4>
-                <h2>buy 1 get 1 free</h2>
-                <span>The best classic dress is on sale at cara</span>
-                <button class="white">Learn More</button>
-            </div>
+        <section id="pagination" class="section-p1">
+            <a href="#">1</a>
+            <a href="#">2</a>
+            <a href="#"><i class="fas fa-long-arrow-alt-right"></i></a>
         </section>
 
-        <section id="banner3">
-            <div class="banner-box">
-                <h2>SEASONAL SALE</h2>
-                <h3>Winter Collection - 50% OFF</h3>
-            </div>
-            <div class="banner-box banner-box2">
-                <h2>SEASONAL SALE</h2>
-                <h3>Winter Collection - 50% OFF</h3>
-            </div>
-            <div class="banner-box banner-box3">
-                <h2>SEASONAL SALE</h2>
-                <h3>Winter Collection - 50% OFF</h3>
-            </div>
-        </section>
 
         <section id="newsletter" class="section-p1 section-m1">
             <div class="newstext">
@@ -384,6 +316,7 @@
                 <button class="normal">Sign Up</button>
             </div>
         </section>
+
 
         <footer class="section-p1">
             <div class="col">
