Modified HTML and CSS in Ecommerce project

--- a/ECommerce Website HTML CSS JS/sproduct.html
+++ b/ECommerce Website HTML CSS JS/sproduct.html
@@ -33,7 +33,40 @@
         </section>
 
         <section id="prodetails" class="section-p1">
+            <div class="single-pro-image">
+                <img src="images/products/f1.jpg" width="100%" id="MainImg" alt="">
+                <div class="small-img-group">
+                    <div class="small-img-col">
+                        <img src="images/products/f1.jpg" width="100%" class="small-img" alt="">
+                    </div>
+                    <div class="small-img-col">
+                        <img src="images/products/f2.jpg" width="100%" class="small-img" alt="">
+                    </div>
+                    <div class="small-img-col">
+                        <img src="images/products/f3.jpg" width="100%" class="small-img" alt="">
+                    </div>
+                    <div class="small-img-col">
+                        <img src="images/products/f4.jpg" width="100%" class="small-img" alt="">
+                    </div>
+                </div>
+            </div>
 
+            <div class="single-pro-details">
+                <h6>Home / T-Shirt</h6>
+                <h4>Men's Fashion T Shirts</h4>
+                <h2>$139.00</h2> 
+                <select>
+                    <option>Select Size</option>
+                    <option>XL</option>
+                    <option>XXL</option>
+                    <option>Small</option>
+                    <option>Large</option>
+                </select>
+                <input type="number" value="1">
+                <button class="normal">Add to Card</button>
+                <h4>Product Details</h4>
+                <span>A shirt is a garment worn on the upper body, typically having sleeves and a front opening. It can be made from various materials like cotton or silk, and comes in diverse colors, patterns, and styles. Shirts are worn for both practical and aesthetic reasons, serving as outerwear and undergarments, and can be casual or formal</span>
+            </div>
         </section>
 
         <section id="newsletter" class="section-p1 section-m1">
