--- a/ECommerce Website HTML CSS JS/sproduct.html
+++ b/ECommerce Website HTML CSS JS/sproduct.html
@@ -205,7 +205,23 @@
         </footer>
 
         <script>
+            
             var mainImg = document.getElementById("MainImg");
+            var smallImg = document.getElementsByClassName("small-img");
+
+            smallImg[0].onclick = function(){
+                mainImg.src = smallImg[0].src;
+            }
+            smallImg[1].onclick = function(){
+                mainImg.src = smallImg[1].src;
+            }
+            smallImg[2].onclick = function(){
+                mainImg.src = smallImg[2].src;
+            }
+            smallImg[3].onclick = function(){
+                mainImg.src = smallImg[3].src;
+            }
+
         </script>
 
         <script src="script.js"></script>
