--- a/ECommerce Website HTML CSS JS/contact.html
+++ b/ECommerce Website HTML CSS JS/contact.html
@@ -65,7 +65,38 @@
             </div>
 
             <div class="map">
-                
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53144.01021314498!2d72.91596624863281!3d33.644187599999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38df9675aaaaaaab%3A0xc5180922c44eb86b!2sNational%20University%20of%20Sciences%20%26%20Technology!5e0!3m2!1sen!2shk!4v1746873003469!5m2!1sen!2shk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
+
+
+        <section id="form-details">
+            <form action="">
+                <span>LEAVE A MESSAGE</span>
+                <h2>We love to hear from you</h2>
+                <input type="text" placeholder="Your Name">
+                <input type="text" placeholder="E-mail">
+                <input type="text" placeholder="Subject">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <button class="normal">Submit</button>
+            </form>
+
+            <div class="people">
+                <div>
+                    <img src="images/people/1.png" alt="">
+                    <p><span>John Doe</span>Senior Marketing Manager <br> 
+                    Phone: +1 000 333 444 <br> Email: contact@example.com</p>
+                </div>
+                <div>
+                    <img src="images/people/2.png" alt="">
+                    <p><span>William Smith</span>Senior Marketing Manager <br> 
+                    Phone: +1 000 333 444 <br> Email: contact@example.com</p>
+                </div>
+                <div>
+                    <img src="images/people/3.png" alt="">
+                    <p><span>Emma Stone</span>Senior Marketing Manager <br> 
+                    Phone: +1 000 333 444 <br> Email: contact@example.com</p>
+                </div>
             </div>
         </section>
 
