--- a/ECommerce Website HTML CSS JS/contact.html
+++ b/ECommerce Website HTML CSS JS/contact.html
@@ -23,7 +23,7 @@
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a class="active" href="contact.html">Contact Us</a></li>
-                <li id="lg-bag"><a href="#"><i class="fa fa-bag-shopping"></i></a></li>
+                <li id="lg-bag"><a href="cart.html"><i class="fa fa-bag-shopping"></i></a></li>
                 <a href="#" id="close"><i class="fa fa-times"></i></a>
             </div>
 
