Completed Ecommerce project

--- a/ECommerce Website HTML CSS JS/cart.html
+++ b/ECommerce Website HTML CSS JS/cart.html
@@ -40,6 +40,78 @@
         </section>
 
 
+        <section id="cart" class="section-p1">
+            <table width="100%">
+                <thead>
+                    <tr>
+                        <td>REMOVE</td>
+                        <td>IMAGE</td>
+                        <td>PRODUCT</td>
+                        <td>PRICE</td>
+                        <td>QUNATITY</td>
+                        <td>SUBTOTAL</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><a href=""><i class="fa fa-times-circle" aria-hidden="true"></i></a></td>
+                        <td><img src="images/products/f1.jpg" alt=""></td>
+                        <td>Cartoon Astronaut T-Shirts</td>
+                        <td>$118.19</td>
+                        <td><input type="number" value="1"></td>
+                        <td>$118.19</td>
+                    </tr>
+                    <tr>
+                        <td><a href=""><i class="fa fa-times-circle" aria-hidden="true"></i></a></td>
+                        <td><img src="images/products/f2.jpg" alt=""></td>
+                        <td>Cartoon Astronaut T-Shirts</td>
+                        <td>$118.19</td>
+                        <td><input type="number" value="1"></td>
+                        <td>$118.19</td>
+                    </tr>
+                    <tr>
+                        <td><a href=""><i class="fa fa-times-circle" aria-hidden="true"></i></a></td>
+                        <td><img src="images/products/f3.jpg" alt=""></td>
+                        <td>Cartoon Astronaut T-Shirts</td>
+                        <td>$118.19</td>
+                        <td><input type="number" value="1"></td>
+                        <td>$118.19</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+
+        <section id="cart-add" class="section-p1">
+            <div id="coupon">
+                <h3>Apply Coupon</h3>
+                <div>
+                    <input type="text" placeholder="Enter Your Coupon">
+                    <button class="normal">Apply</button>
+                </div>
+            </div>
+
+            <div id="subtotal">
+                <h3>Cart Total</h3>
+                <table>
+                    <tr>
+                        <td>Cart Subtotal</td>
+                        <td>$335</td>
+                    </tr>
+                    <tr>
+                        <td>Shipping</td>
+                        <td>Free</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Total</strong></td>
+                        <td><strong>$335</strong></td>
+                    </tr>
+                </table>
+                <button class="normal">Proceed to Checkout</button>
+            </div>
+        </section>
+
+
         <footer class="section-p1">
             <div class="col">
                 <img class="logo" src="images/logo.png" alt="">
